Adicionando servico que consome a API do GitHub

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-app="githubViwer">
+<html ng-app="gitHubViewer">
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body ng-controller="MainController">
@@ -21,6 +21,7 @@
 
         <script src="components/angular/angular.min.js"></script>
         <script src="index.js"></script>
+        <script src="github.js"></script>
 
 </body>
 
