organizando melhor os controllers e as views

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="gitHubViewer">
+<html ng-app="gitHubRepositories">
 
 <head>
     <!-- <link rel="stylesheet" href="style.css"> -->
@@ -14,7 +14,8 @@
     <script src="components/angular-route/angular-route.min.js"></script>
     <!-- <script src="app/components/angular-resource/angular-resource.min.js"></script> -->
     <script src="app.js"></script>
-    <script src="controllers/main-controller.js"></script>
+    <script src="controllers/search-controller.js"></script>
+    <script src="controllers/user-controller.js"></script>
     <script src="services/github.js"></script>
 
 </body>
